# databricks-training-trainees

.github/workflows/: day04-deploy.yml  day04-pr-validation.yml
day-01/exercises/: 01_python_basics.py  04_dataset_exploration.py
day-02/exercises/activity_3/: use_auto_cdc.md
day-03/examples/dbt_olist/: .pre-commit-config.yaml  .sqlfluffignore  DATA_MODELLING.md  README.md  dbt_project.yml  pyproject.toml
day-03/examples/dbt_olist/macros/: cast_timestamp.sql  generate_schema_name.sql
day-03/examples/dbt_olist/models/marts/: dim_customers.sql  dim_products.sql  fct_orders.sql  gld_delivery_performance.sql  gld_revenue_by_category.sql
day-03/examples/dbt_olist/models/staging/: stg_customers.sql  stg_order_items.sql  stg_order_payments.sql  stg_orders.sql  stg_products.sql
day-03/examples/dbt_olist/snapshots/: orders_snapshot.sql
day-03/solutions/dbt_olist/: README.md
day-03/solutions/dbt_olist/macros/: cast_timestamp.sql
day-03/solutions/dbt_olist/models/marts/: _mart_models.yml  gld_seller_scorecard.sql
day-03/solutions/dbt_olist/models/staging/: _stg_models.yml  stg_order_reviews.sql  stg_sellers.sql
day-03/solutions/dbt_olist/tests/: assert_scorecard_revenue_non_negative.sql
day-04/: CICD_SETUP.md  CONVERT_DBT_TO_BUNDLE.md
day-04/.github/workflows/: deploy.yml  pr_validation.yml
day-04/dbt_olist_bundle/: README.md  databricks.yml  pyproject.toml
day-04/dbt_olist_bundle/resources/: dbt_olist_bundle.job.yml
