[project]
name = "dbt-olist"
version = "0.1.0"
description = "dbt project for olist dataset"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dbt-core>=1.11.11",
    "dbt-databricks>=1.12.1",
]

[tool.uv]
package = false   # dbt project is not a Python package — do not build a wheel
